<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateCourseActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="110dp" />

    <EditText
        android:id="@+id/etten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/nhap_ten"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/etlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/nhap_link_anh"
        android:minHeight="48dp" />

    <!--button for updating our course-->
    <Button
        android:id="@+id/btntupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#37713D"
        android:text="@string/update_anh"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btdelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#374C71"
        android:text="@string/xoa_anh"
        android:textAllCaps="false" />

</LinearLayout>